fixed spacing for text blurb

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
 }
 
 .container{
-    display: flex;
+    display: inline;
     position: relative;
 }
 
@@ -78,23 +78,27 @@ body{
 
 .test{
  display: flex;
- flex-flow: column nowrap;
+ flex-flow: column wrap;
 
 }
 
 .person{
     position: absolute;
-    bottom: 170px;
-    right: 150px;
+    bottom: -50px;
+    right: -100px;
     width: 410px;
     height: 189px;
+    background-color: #181719;
+    box-shadow: 0px 4px 4px;
+
 
 
 }
 
 .person-container{
-    box-shadow: 0px 4px 4px;
-    display: inline-block;
+
+    
+
 }
 .text-info{
 
